# ai-agent-running-coach

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
agent/: agent.py  memory.py  prompts.py  queries.py  tools.py
api/: dashboard.py  main.py
db/: client.py  models.py
docs/superpowers/plans/: 2026-05-03-ingestion-refresh.md  2026-05-03-rename-recovery-daily.md  2026-05-03-whoop-ingestion.md  2026-05-04-chat-fixed-window.md  2026-05-04-dashboard-metrics.md  2026-05-04-docs-update.md  2026-05-04-gcal-runna-ingestion.md  2026-05-04-langgraph-migration.md  2026-05-05-athlete-profile-memory.md  2026-05-06-agent-data-tools.md  (+4 more)
evals/: golden_set.json  run_evals.py
ingestion/: pipeline.py
ingestion/sources/: base.py  google_calendar.py  strava.py  whoop.py
scripts/: add_efficiency_factor.py  clear_tables.py  create_tables.py  enable_rls.py  seed_ingestion_log.py  smoke_test_agent_tools.py  smoke_test_athlete_memory.py  smoke_test_chat_ui.py  smoke_test_connection_db.py  smoke_test_gcal_ingest.py  smoke_test_strava.py  smoke_test_strava_ingest.py  smoke_test_whoop_connection.py  smoke_test_whoop_ingest.py  whoop_oauth.py
tests/: test_add_efficiency_factor.py  test_agent.py  test_agent_queries.py  test_chat_endpoint.py  test_dashboard_endpoint.py  test_enable_rls.py  test_gcal_model.py  test_gcal_source.py  test_ingest_endpoints.py  test_ingestion_log_model.py  test_memory.py  test_pipeline.py  test_refresh_tool.py  test_strava_normalize.py  test_tools.py  test_whoop_normalize.py
ui/: app.py
(+14 files in other folders)
